@@ -1,3 +1,8 @@
+2008-10-08  kitone  <kitone@gna.org>
+
+	* src/formats/MicroDVD.h:
+	Restore tag conversion.
+
 2008-10-07  kitone  <kitone@gna.org>
 
 	* src/actions/DocumentManagement.cc:
